--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 Version 1.0.51 :
 - Fixed a crash when trying to switch chapter on the Warp selection menu
 - Fixed a bug preventing arrows near the current area name to appear if more than one chapter was avaiable on the Warp selection menu
+- Fixed a bug preventing warps to work correctly when not using the In-Game map
+- Fixed a bug preventing the warp screen to be closed when pressing ESC or Cancel when not using the In-Game map
 - Fixed a bug allowing the player to grab sides of slopes in unintended places
 
 Version 1.0.50 :
