fix: Remote Drone respect Invincible assist variant

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,8 @@ Version 1.0.53 :
 - Teleporting to the Remote Drone should not longer spawn another drone immediately if the item button is pressed for too long
 - Pressing down when holding a bomb or mega bomb should no longer spawn another bomb or mega bomb if the item button is pressed
 - Added a debug command : reset_collectables_upgrades
-- The remote Drone should now correctly respawn at the correct place after hitting a Change Respawn Trigger or a Custom Checkpoint
+- The Remote Drone should now correctly respawn at the correct place after hitting a Change Respawn Trigger or a Custom Checkpoint
+- The Remote Drone can no longer die if the Invincible assist variant is active. It can still be destroyed manually
 
 Version 1.0.52 :
 - Fixed a bug soft-locking the game when selecting the 'Stay Here' option on the Warp selection menu when using the In-Game map
