--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,14 @@
 Version 1.0.53 :
+- Added back the Jump Boost ability, usable by the Remote Drone and allowing it to jump up to 50% higher
+- The Hover Boot ability is now only usable by the Remote Drone and has been renamed "Hover Jet"
+- Updated icons for the Dash Boots and Hover Jet abilities
 - Maps that use an Upgrade Controller but have not set the starting stamina value now use 110 stamina as default
+- Added a debug command : reset_collectables_upgrades
 - The Pulse Radar ability now display correctly Custom Dash Blocks
 - Teleporting to the Remote Drone should not longer spawn another drone immediately if the item button is pressed for too long
 - Pressing down when holding a bomb or mega bomb should no longer spawn another bomb or mega bomb if the item button is pressed
-- Added a debug command : reset_collectables_upgrades
 - The Remote Drone should now correctly respawn at the correct place after hitting a Change Respawn Trigger or a Custom Checkpoint
 - The Remote Drone can no longer die if the Invincible assist variant is active. It can still be destroyed manually
-- The Hover Boot ability is now only usable by the Remote Drone and has been renamed "Hover Jet"
-- Updated icons for the Dash Boots and Hover Jet abilities
 
 Version 1.0.52 :
 - Fixed a bug soft-locking the game when selecting the 'Stay Here' option on the Warp selection menu when using the In-Game map
