--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version 1.0.55 :
 - Fixed a crash happening when the player throw a Bomb or a Mega Bomb at the same frame it would explode
 - Fixed a bug preventing the player to dash if they were grabbing a Magnetic Ceiling that got disabled
 - Fixed a bug preventing Break Blocks set to Lightning Dash to break correctly if the player dashed into them from too far
+- Fixed a bug sometimes preventing Flag Dash Switches to be in the correct state based on their mode and the state of their flag
 
 Version 1.0.54 :
 - Added "Type" attribute to Drone Switches
