feature: Slopes Render Method attribute

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -498,6 +498,7 @@ entities.XaphanHelper/Slope.attributes.description.rainbow=If true, the slope wi
 entities.XaphanHelper/Slope.attributes.description.canJumpThrough=If true, the player can jump through the slope.
 entities.XaphanHelper/Slope.attributes.description.affectPlayerSpeed=If true, reduces the player's speed when going up the slope and increases it when going down.
 entities.XaphanHelper/Slope.attributes.description.flag=If this flag is set, the slope will use the directory and texture set in Flag Custom Directory and FlagTexture when entering the room.
+entities.XaphanHelper/Slope.attributes.description.renderMethod=Change the way the game draw the slope.\nDepending on your tileset, one method may be better than the other.\n(Effect only visible in game)
 
 
 # TeleportStrawberry
