fix: Drone Respawn after entering Change Respawn Triggers

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ Version 1.0.55 :
 - Fixed a bug sometimes preventing Flag Dash Switches to be in the correct state based on their mode and the state of their flag
 - Fixed a bug respawning the player in the wrong room when dying with a golden strawberry in a room containing Flag Dash Switches or Drone Switches
 - Fixed a bug respawning the player at the wrong position after spawning the remote drone, entering an other room, dying with it then destroying it and dying in the starting room while playing as Madeline
+- Fixed a bug respawning the player at the wrong position after spawning the remote drone and entering a Change Respawn Trigger
 - Lowered the Remote Drone beam and other projectiles vertical offset when shooting horizontaly by 1 pixel
 
 Version 1.0.54 :
