--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,9 @@ Version 1.0.55 :
 - Added "Remove When Outside" attribute to Multi Music Trigger
 - Added "Camera Lock" and "Draw Projectiles Outline" attributes to Custom Badeline Boss
 - Added "Render Method" attribute to Slopes
+- Added "Display" attribute to In Game Map Tiles Controllers
+- Updated InGameMapTilesController with 2 new tiles : "HorizontalAreaConnection" and "VerticalAreaConnection"
+- Rooms containing the 2 new tiles are now always drawn first on the map, allowing other rooms to overlap them as they are discovered
 - Increased the size of Drone Switches to make it easier to aim at them
 - Destroying the drone manually now detach uncollected red strawberries
 - Bubble doors no longer close when the player is going away from them with the Remote Drone if Madeline is close enough to the door
