--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Version 1.0.55 :
 - Added Stop Entity Respawn Trigger
+- Added Flag On Interact Trigger
 - Added "Tutorial" attribute to Drone Switches
 - Added "Only Need One Flag" attribute to Bubble Doors
 - Added "Inverted" attribute to Reset Flags Trigger
