--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@ Version 1.0.55 :
 - Increased the size of Drone Switches to make it easier to aim at them
 - Destroying the drone manually now detach uncollected red strawberries
 - Bubble doors no longer close when the player is going away from them with the Remote Drone if Madeline is close enough to the door
+- Lowered the Remote Drone beam and other projectiles vertical offset when shooting horizontaly by 1 pixel
 - Fixed a crash happening when the player throw a Bomb or a Mega Bomb at the same frame it would explode
 - Fixed a crash happening when the Remote Drone was destroyed or died inside of a Camera Target Trigger
 - Fixed a crash sometimes happening when the player died while screw attacking
@@ -27,7 +28,7 @@ Version 1.0.55 :
 - Fixed a bug respawning the player at the wrong position after spawning the remote drone and entering a Change Respawn Trigger
 - Fixed a bug preventing Reset Flags Trigger to work when trying to set a flag already set or unsetting a flag already not set
 - Fixed a bug respawing the player in the wrong room while using the remote drone when using the Save and Exit option from the Pause menu after dying in a room that is not the one the drone was spawned initially
-- Lowered the Remote Drone beam and other projectiles vertical offset when shooting horizontaly by 1 pixel
+- Fixed a bug hardlocking the game on the Status screen
 
 Version 1.0.54 :
 - Added "Type" attribute to Drone Switches
