refacor: Allows unlimited Tiles Controllers per room

--- a/changelog.txt
+++ b/changelog.txt
@@ -17,17 +17,19 @@ Version 1.0.55 :
 - Destroying the drone manually now detach uncollected red strawberries
 - Bubble doors no longer close when the player is going away from them with the Remote Drone if Madeline is close enough to the door
 - Lowered the Remote Drone beam and other projectiles vertical offset when shooting horizontaly by 1 pixel
+- Removed the limit of 10 In-GameMapTilesControllers per room
 - Fixed a crash happening when the player throw a Bomb or a Mega Bomb at the same frame it would explode
 - Fixed a crash happening when the Remote Drone was destroyed or died inside of a Camera Target Trigger
 - Fixed a crash sometimes happening when the player died while screw attacking
+- Fixed a bug preventing the Warp Menu to be centered when not using the In-Game map
 - Fixed a bug preventing the player to dash if they were grabbing a Magnetic Ceiling that got disabled
 - Fixed a bug preventing Break Blocks set to Lightning Dash to break correctly if the player dashed into them from too far
 - Fixed a bug sometimes preventing Flag Dash Switches to be in the correct state based on their mode and the state of their flag
 - Fixed a bug respawning the player in the wrong room when dying with a golden strawberry in a room containing Flag Dash Switches or Drone Switches
 - Fixed a bug respawning the player at the wrong position after spawning the remote drone, entering an other room, dying with it then destroying it and dying in the starting room while playing as Madeline
+- Fixed a bug respawning the player in the wrong room while using the remote drone when using the Save and Exit option from the Pause menu after dying in a room that is not the one the drone was spawned initially
 - Fixed a bug respawning the player at the wrong position after spawning the remote drone and entering a Change Respawn Trigger
 - Fixed a bug preventing Reset Flags Trigger to work when trying to set a flag already set or unsetting a flag already not set
-- Fixed a bug respawing the player in the wrong room while using the remote drone when using the Save and Exit option from the Pause menu after dying in a room that is not the one the drone was spawned initially
 - Fixed a bug hardlocking the game on the Status screen
 
 Version 1.0.54 :
