fix: Load at start of a merged campaign if saved room no longer exist

--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ Version 1.0.55 :
 - Bubble doors no longer close when the player is going away from them with the Remote Drone if Madeline is close enough to the door
 - Lowered the Remote Drone beam and other projectiles vertical offset when shooting horizontaly by 1 pixel
 - Removed the limit of 10 In-GameMapTilesControllers per room
+- Campaigns using a Merge Chapters Controller should no longer crash when entering them if the player saved in a room that no longer exist. Instead, the player will be loaded at the start of the campaign
 - Fixed a crash happening when the player throw a Bomb or a Mega Bomb at the same frame it would explode
 - Fixed a crash happening when the Remote Drone was destroyed or died inside of a Camera Target Trigger
 - Fixed a crash sometimes happening when the player died while screw attacking
