--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ Version 1.0.55 :
 - Added "Display" attribute to In Game Map Tiles Controllers
 - Added "Respawn" and "Destroy Static Movers" attributes to Break Blocks
 - Added "Only Cell Visible" attribute to Cell Locks
+- Added "Switch Type", "Improved Tileset" and "Only One Tileset" attributes to Jump Blocks
 - Removed "Permanent" attributefrom Break Blocks. Existing blocks are still compatible with this change
 - Updated InGameMapTilesController with 2 new tiles : "HorizontalAreaConnection" and "VerticalAreaConnection"
 - Rooms containing the 2 new tiles are now always drawn first on the map, allowing other rooms to overlap them as they are discovered
