--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,9 @@ Version 1.0.55 :
 - Added "Only Cell Visible" attribute to Cell Locks
 - Added "Switch Type", "Improved Tileset" and "Only One Tileset" attributes to Jump Blocks
 - Removed "Permanent" attributefrom Break Blocks. Existing blocks are still compatible with this change
+- Re-ordered attributes of Flag Temple Gates
+- Flag Temple Gates now display the mirror sprite in the editor when using a non-vanilla sprite instead of a red rectangle
+- Flag Temple Gates and Flag Dash Switches "Sprite Name" attribute now allows a choice of vanilla sprites and can be edited
 - Updated InGameMapTilesController with 2 new tiles : "HorizontalAreaConnection" and "VerticalAreaConnection"
 - Rooms containing the 2 new tiles are now always drawn first on the map, allowing other rooms to overlap them as they are discovered
 - Increased the size of Drone Switches to make it easier to aim at them
