--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 1.0.56 :
+- Fixed a bug preventing Refills in "The Secret of Celeste Mountain" to be collected when the player had low stamina
+- Fixed a bug preventing the player speed to be reset correctly when exiting a map while on a Slope that has the 'affect Player Speed" attribute set to true
+
 Version 1.0.55 :
 - Added Jump Blocks Flip Sound Controller
 - Added Stop Entity Respawn Trigger
